// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBadge selected ToggleBadge renders with default props 1`] = `
<button
  className="eseAbx"
  color="primary"
  fontSize={0}
  selected={true}
/>
`;

exports[`ToggleBadge selected one with background-color and text color passed as props hover state 1`] = `
<button
  className="hbTjIn"
  color="red"
  fontSize={1}
  selected={true}
/>
`;

exports[`ToggleBadge unselected ToggleBadge renders with default props 1`] = `
<button
  className="eQBGlN"
  color="primary"
  fontSize={0}
  selected={false}
/>
`;
